--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/celgutierrez/thebar#readme",
   "dependencies": {
+    "angular-route": "^1.8.2",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "path": "^0.12.7"
